part3/3_7/manifests/todoapp-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: todo-application
  labels: 
    name: todo-application
