part3/3_7/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: todo-application
  name: todolist-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: todolist-scv
          servicePort: 2345
      - path: /backend/*
        backend:
          serviceName: todo-backend-scv
          servicePort: 3001
